--- a/config/areas.json
+++ b/config/areas.json
@@ -1,7 +1,38 @@
-﻿{
-  "Info Area": [0, 0, 100, 100],
-  "Buttons": [0, 0, 100, 100],
-  "Object Area": [0, 0, 100, 100],
-  "Focus Area": [0, 0, 100, 100],
-  "Chat Area": [0, 0, 100, 100]
+{
+  "Info Area": [
+    0,
+    0,
+    100,
+    100
+  ],
+  "Buttons": [
+    0,
+    0,
+    100,
+    100
+  ],
+  "Object Area": [
+    0,
+    0,
+    100,
+    100
+  ],
+  "Focus Area": [
+    0,
+    0,
+    100,
+    100
+  ],
+  "Chat Area": [
+    0,
+    0,
+    100,
+    100
+  ],
+  "FullScreen": [
+    0,
+    0,
+    1920,
+    1080
+  ]
 }
